--- a/Responsive.scss
+++ b/Responsive.scss
@@ -65,8 +65,8 @@
   }
   .outlet {
     .mainPageSection {
-      .flex {
-        flex-direction: column;
+      .courseSwiper {
+        width: 635px;
       }
     }
   }
