--- a/style.css
+++ b/style.css
@@ -820,9 +820,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -830,7 +829,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  gap: 85px;
+  gap: 16px;
 }
 
 .outlet .mainPageSection .flex .boxWrapper {
@@ -965,7 +964,7 @@ body {
 }
 
 .outlet .mainPageSection .courseSwiper {
-  width: 75%;
+  width: 956px;
   margin: auto;
 }
 
