--- a/_Variables.scss
+++ b/_Variables.scss
@@ -53,6 +53,9 @@ $fontScale: 2;
         @if $just == c { $just: center; }
         @if $just == s { $just: flex-start; }
         @if $just == e { $just: flex-end; }
+        @if $just == sa { $just: space-around; }
+        @if $just == sb { $just: space-between; }
+        @if $just == se { $just: space-evenly; }
         @if $align == c { $align: center; }
         @if $align == s { $align: flex-start; }
         @if $align == e { $align: flex-end; }
