--- a/style.scss
+++ b/style.scss
@@ -336,6 +336,7 @@ body {
       }
     }
     nav.navBar {
+      width: 100%;
       grid-area: navBar;
       margin: 0;
       position: static;
