--- a/Responsive.scss
+++ b/Responsive.scss
@@ -137,6 +137,9 @@
         margin-bottom: 10px;
         ul.mainNav {
           justify-content: center;
+          ul.CommonNav {
+            width: 762px;
+          }
         }
       }
     }
