--- a/style.css
+++ b/style.css
@@ -163,8 +163,8 @@ body {
 }
 
 .header .topBar .right .wrap .phone {
-  width: 25px;
   height: 25px;
+  min-width: 25px;
   background: url("./images/img/Header-Footer.png");
   background-position: -261px -11px;
   background-size: 1875%;
@@ -198,7 +198,7 @@ body {
 }
 
 .header .topBar .left .siteGearIcon {
-  width: 49px;
+  min-width: 49px;
   height: 29px;
   background: url("./images/img/Header-Footer.png");
   background-position: -69px -149px;
@@ -704,6 +704,7 @@ body {
 .header .headerContainer .slider .pic {
   width: 100%;
   height: 100%;
+  min-height: 200px;
   background-color: orange;
   color: white;
   font-weight: bold;
