--- a/style.scss
+++ b/style.scss
@@ -84,7 +84,8 @@ body {
         @include flex(c, c);
         gap: 10px;
         .phone {
-          @include square(25px);
+          height: 25px;
+          min-width: 25px;
           background: url("./images/img/Header-Footer.png");
           background-position: -261px -11px;
           background-size: 1875%;
@@ -112,7 +113,7 @@ body {
       color: white;
       font-weight: bold;
       .siteGearIcon {
-        width: 49px;
+        min-width: 49px;
         height: 29px;
         background: url("./images/img/Header-Footer.png");
         background-position: -69px -149px;
@@ -460,6 +461,7 @@ body {
       .pic {
         width: 100%;
         height: 100%;
+        min-height: 200px;
         background-color: orange;
         color: white;
         font-weight: bold;
