--- a/style.scss
+++ b/style.scss
@@ -504,8 +504,11 @@ body {
   }
   &::before,
   &::after {
-    content: url("./images/img/atna-Host.png");
+    content: '';
+    background: url("./images/img/atna-Host.png") no-repeat;
     margin: 0 10px;
+    width: 88px;
+    height: 72px;
   }
 }
 
