--- a/Responsive.css
+++ b/Responsive.css
@@ -214,90 +214,112 @@
   }
 }
 
-/* Small devices (portrait tablets and large phones, 600px till and down) */
-/* Extra small devices (phones, 320px and down) */
-@media screen and (max-width: 320px) {
-  .footer {
-    margin: 0;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    height: auto;
-  }
-  .footer .rightTop {
+/* Small devices (portrait tablets and large phones, 600px till 481 and down) */
+@media only screen and (max-width: 600px) {
+  .header .topBar .right .wrap.email {
     display: none;
   }
-  .footer .centerTop .layer1 p.title {
-    font-size: 10pt;
+  .header .headerContainer .header .rest .layer2 a.item span {
+    font-size: 11px;
   }
-  .footer .centerTop .layer1 p.address {
-    font-size: 8pt;
+  .header .headerContainer .calendar .FatLIne {
+    margin: 34px 25px;
   }
-  .footer .centerTop .layer1 p.site {
-    font-size: 10pt;
+  .header .headerContainer nav.navBar ul.mainNav .item ul.CourseNav {
+    width: 200px;
   }
-  .footer .centerTop .layer1 p.num {
-    font-size: 8pt;
-  }
-  .footer .leftTop {
-    display: none;
-  }
-  .footer .rightCenter {
-    display: none;
-  }
-  .footer .leftCenter {
-    display: none;
-  }
-  .footer .centerCenter .layer2 {
-    gap: 19px;
-  }
-  .footer .centerCenter .layer2 .item > span {
-    font-size: 7.2pt;
-  }
-  .footer .rightBottom .eNamad {
-    width: 100px;
-    margin: 15px 0;
-  }
-  .footer .centerBottom .wholeNav {
-    width: 100%;
-  }
-  .footer .centerBottom .wholeNav .nav1 {
-    display: none;
-  }
-  .footer .centerBottom .wholeNav .line {
-    margin: 15px auto;
-  }
-  .footer .centerBottom .wholeNav .nav2 {
-    gap: 21px;
-  }
-  .footer .centerBottom .wholeNav .nav2 .item {
-    font-size: 7.2pt;
-  }
-  .footer .centerBottom .layer3 {
-    margin-bottom: 0;
-    margin-top: 20px;
-    gap: 7px;
-  }
-  .footer .centerBottom .layer3 .footerImage {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-  }
-  .footer .leftBottom {
-    display: none;
+  .header .headerContainer nav.navBar ul.mainNav .item ul.CourseNav ul.InnerNav {
+    width: 275px;
   }
 }
 
+/* Extra small devices (phones, 480px till 320 and down) */
+/*-----Footer mobile
+  .footer {
+    display: block;
+    margin: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    height: auto;
+    $fontScaleMobile: 2.5;
+
+    .rightTop {
+      display: none;
+    }
+    .centerTop {
+      .layer1 {
+        p.title {
+          font-size: 25pt / $fontScaleMobile;
+        }
+        p.address {
+          font-size: 20pt / $fontScaleMobile;
+        }
+        p.site {
+          font-size: 25pt / $fontScaleMobile;
+        }
+        p.num {
+          font-size: 20pt / $fontScaleMobile;
+        }
+      }
+    }
+    .leftTop {
+      display: none;
+    }
+    .rightCenter {
+      display: none;
+    }
+    .leftCenter {
+      display: none;
+    }
+    .centerCenter {
+      .layer2 {
+        gap: 19px;
+        .item {
+          > span {
+            font-size: 18pt / $fontScaleMobile;
+          }
+        }
+      }
+    }
+    .rightBottom {
+      .eNamad {
+        width: 100px;
+        margin: 15px 0;
+      }
+    }
+    .centerBottom {
+      .wholeNav {
+        width: 100%;
+        .nav1 {
+          display: none;
+        }
+        .line {
+          margin: 15px auto;
+        }
+        .nav2 {
+          gap: 21px;
+          .item {
+            font-size: 18pt / $fontScaleMobile;
+          }
+        }
+      }
+      .layer3 {
+        margin-bottom: 0;
+        margin-top: 20px;
+        gap: 7px;
+        .footerImage {
+          transform: scale(0.9);
+        }
+      }
+    }
+    .leftBottom {
+      display: none;
+    }
+  }
+----------------*/
 /*-------------------FONT SCALE----------------------
 .rightTop {
   .layer {
