--- a/Responsive.scss
+++ b/Responsive.scss
@@ -348,6 +348,11 @@
         }
 
         }
+        ul.mainNav {
+          gap: 10px;
+          padding-left: 10px;
+          padding-right: 10px;
+        }
       }
     }
   }
