--- a/style.css
+++ b/style.css
@@ -107,7 +107,100 @@ body {
   transition: 0.2s;
 }
 
+.hollowButton {
+  color: black;
+  border: 2px solid black;
+  border-radius: 24px;
+  background-color: transparent;
+  width: 133px;
+  height: 26px;
+  -webkit-box-sizing: content-box;
+          box-sizing: content-box;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: iranSansMedium;
+}
+
 /*--------General--------------*/
+#resMenu {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  right: 0;
+  background-color: white;
+  overflow: hidden;
+  color: red;
+  -webkit-transition: .4s;
+  transition: .4s;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+#resMenu .fa-times {
+  color: black;
+  position: absolute;
+  top: 0;
+  left: 0;
+  font-size: 25px;
+  padding: 15px;
+}
+
+#resMenu .fa-times:hover {
+  cursor: pointer;
+}
+
+#resMenu .content .mainNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#resMenu .content .mainNav .item .collapsible::after {
+  content: "\f107";
+  font-family: "Font Awesome 5 Free";
+  font-weight: 900;
+  position: relative;
+  left: -4px;
+  top: 2px;
+}
+
+#resMenu .content .mainNav .item .content {
+  display: none;
+}
+
 .header {
   padding-bottom: 50px;
   background-color: #f6f6f6;
@@ -136,6 +229,10 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.header .topBar .menu {
+  display: none;
 }
 
 .header .topBar .right {
